# gtts-batch

./: Cargo.toml  README.md  build.bat  dir-walk.go  go.mod  gtts-batch-android-ARM64  gtts-batch-darwin-ARM64  gtts-batch-darwin-x64  gtts-batch-linux-ARM64  gtts-batch-linux-x32  gtts-batch-linux-x64  gtts-batch.go  gttsb-cli.go
src/: main.rs
