[package]
name = "gtts-batch"
author = "Jonathon Wisnoski"
version = "0.1.0"
edition = "2021"
about = '''Wrapper over gtts 
(a python app to use google translate as a TTS engine)
 to handle large conversions. Batch converting many files,
  and spitting up large files into multiple smaller files.'''

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.23", features = ["derive"] }
tempfile = "3.3.0"